data/derived/comb/progs/unify/prog5348.ml.out
Characters 159-160:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type int * int list -> 'a -> int list
       but an expression was expected of type
         int * int list -> 'a -> int * int list
       Type int list is not compatible with type int * int list 
